--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-redux": "^7.1.23",
     "axios": "^0.26.1",
     "bootstrap": "5.1.3",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
